# tactical-os

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE-Apache-2.0  LICENSE-MIT  PROJECT.md  README.md  biome.json  docker-compose.yml  env.docker.example  justfile  lefthook.yml  package.json  plan.md  render.yaml  skills-lock.json  tsconfig.json  turbo.json
.agents/: uniwind.txt
.cursor/: mcp.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/ai-api/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/ai-api/scripts/: pytest.mjs  uv.mjs
apps/ai-api/src/ai_api/: __init__.py  main.py
apps/ai-api/src/ai_api/api/: deps.py
apps/ai-api/src/ai_api/api/v1/: __init__.py  assist.py  health.py  router.py
apps/ai-api/src/ai_api/application/: __init__.py  assist_service.py
apps/ai-api/src/ai_api/config/: __init__.py  settings.py
apps/ai-api/src/ai_api/domain/: __init__.py  errors.py  ports.py
apps/ai-api/src/ai_api/infrastructure/: __init__.py
apps/ai-api/src/ai_api/infrastructure/providers/: __init__.py  factory.py  mock_provider.py  openai_compatible.py
apps/ai-api/src/ai_api/infrastructure/security/: __init__.py  internal_token.py
apps/ai-api/src/ai_api/schemas/: __init__.py  assist.py  health.py
apps/ai-api/tests/: conftest.py  test_assist.py  test_health.py
apps/fastapi/: README.md  package.json  pyproject.toml
apps/fastapi/src/: __init__.py  main.py
apps/fastapi/tests/: test_health.py
apps/rust/: Cargo.toml  Dockerfile  README.md  cookie.txt  package.json  test_api.sh  test_login.sh
apps/rust/.cargo/: config.toml
apps/rust/src/: app.rs  main.rs  server.rs
apps/rust/src/modules/: mod.rs
apps/rust/src/modules/auth/: auth_controller.rs  auth_routes.rs  auth_service.rs  auth_validator.rs  mod.rs
apps/rust/src/shared/: mod.rs
apps/rust/src/shared/configs/: app_config.rs  http_config.rs  mod.rs
apps/rust/src/shared/lib/: db.rs
apps/rust/src/shared/middlewares/: jwt_middleware.rs
apps/rust/src/shared/utils/: date_time.rs  jwt.rs  mod.rs  password.rs
docker/: README.md
docs/: QoL.md  README.md  ai-first-school-os-workflow.md  ai-first-starter-workflow.md  dependency-upgrade-report-2026-05-17.md  docker.md  overrides.md  product-system-design.md  school-os-production-roadmap.md
patches/: react-native-css@3.0.6.patch
scripts/: README.md
(+658 files in other folders)
