[project]
name = "ai-api"
version = "0.1.0"
description = "Starter AI assistance API (FastAPI + uv)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.116.0",
	"uvicorn[standard]>=0.35.0",
	"pydantic-settings>=2.10.0",
	"httpx>=0.28.0",
]

[project.scripts]
ai-api = "ai_api.main:run"

[dependency-groups]
dev = [
	"pytest>=8.4.0",
	"pytest-asyncio>=1.0.0",
	"ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
