[project]
name = "school-os-fastapi"
version = "0.1.0"
description = "FastAPI app for the school-os monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.4,<0.136.0",
    "uvicorn[standard]>=0.44.0,<0.45.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=9.0.3,<10.0.0",
    "ruff>=0.15.13,<0.16.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
